# alzheimer-s-disease-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
research/: feature_analysis.ipynb  feature_corellation.ipynb  research.ipynb
scripts/: tempCodeRunnerFile.py
src/: EBM_Model.ipynb  main_fr.ipynb  main_mik.ipynb  main_mik_2.ipynb  main_mik_3.ipynb  main_mik_4.ipynb  test_models.py  test_random.py  test_regression.py  test_svm.py
src/functions/: data_prep.py  save_load_model.py  visualization.py
src/models/: logistic_regression.py  model.py  model_.py  random_forest.py  svm.py  xgboost.py
src/models/trained/: ebm_study.json.joblib  study_XGB.joblib  study_logistic.joblib  study_rf.joblib  study_svm.joblib
src/modules/: metrics.py
src/research/: research-franek.ipynb  research-karol.ipynb  research-kasia.ipynb  research.ipynb
utl/modules/: cross_validation.py  metrics.py
utl/modules/algorithms/: logistic_regression.py
utl/modules/other/: classes.json
utl/scripts/: install_kernel.py
